--- a/src/components/Service/Service.css
+++ b/src/components/Service/Service.css
@@ -1,7 +1,16 @@
 .service{
     background: rgb(236, 236, 236);
     margin-bottom: 2rem;
+    border-radius: 20px;
 }
 .service img{
     height: 12rem;
+    border-radius: 20px 20px 0px 0px;
+}
+.service img:hover{
+    transform: scale(1.2);
+    transition: all 1s ease;
+}
+.card-img-container{
+    overflow: hidden;
 }
